// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterCard tests FilterCard should allow selection of available filters 1`] = `
<div
 className="filter-card"
>
 <div
  className="filter-card--header"
 >
  <span
   style={
    Object {
     "marginLeft": "12px",
    }
   }
  >
   Add filter for: 
  </span>
  <select
   className="filter-selection"
   defaultValue="-1"
  >
   <option
    disabled={true}
    value="-1"
   >
    Column
   </option>
   <option
    value={0}
   >
    Filter1
   </option>
   <option
    value={1}
   >
    Filter2
   </option>
  </select>
 </div>
</div>
`;

exports[`FilterCard tests FilterCard should correctly reflect already set number filters 1`] = `
<div
 className="filter-card"
>
 <div
  className="filter-card--header"
 >
  <h4
   className="title"
  >
   cputime 
  </h4>
  <i
   className="fa trash"
  />
 </div>
 <div
  className="filter-card--body"
 >
  <div
   className="filter-card--range-container"
  >
   <b>
    1337
   </b>
   <b>
    9001
   </b>
  </div>
  <div
   className="rc-slider"
  >
   <div
    className="rc-slider-rail"
   />
   <div
    className="rc-slider-track rc-slider-track-1"
    style={
     Object {
      "left": "2.1268267223382047%",
      "right": "auto",
      "width": "19.572025052192064%",
     }
    }
   />
   <div
    className="rc-slider-step"
   />
   <div
    aria-disabled={false}
    aria-valuemax={9001}
    aria-valuemin={1337}
    aria-valuenow={1500}
    className="rc-slider-handle rc-slider-handle-1"
    role="slider"
    style={
     Object {
      "left": "2.1268267223382047%",
      "right": "auto",
      "transform": "translateX(-50%)",
     }
    }
    tabIndex={0}
   />
   <div
    aria-disabled={false}
    aria-valuemax={9001}
    aria-valuemin={1337}
    aria-valuenow={3000}
    className="rc-slider-handle rc-slider-handle-2"
    role="slider"
    style={
     Object {
      "left": "21.69885177453027%",
      "right": "auto",
      "transform": "translateX(-50%)",
     }
    }
    tabIndex={0}
   />
   <div
    className="rc-slider-mark"
   />
  </div>
  <div
   className="filter-card--range-input-fields"
  >
   <label
    className="range-input-fields--min"
    htmlFor="inp-undefined-min"
   >
    minimum
   </label>
   <label
    className="range-input-fields--max"
    htmlFor="inp-undefined-max"
   >
    maximum
   </label>
   <input
    lang="en-US"
    name="inp-undefined-min"
    step={1}
    type="number"
    value="1500"
   />
   <input
    lang="en-US"
    name="inp-undefined-max"
    step={1}
    type="number"
    value="3000"
   />
  </div>
 </div>
</div>
`;

exports[`FilterCard tests FilterCard should correctly reflect already set status filters 1`] = `
<div
 className="filter-card"
>
 <div
  className="filter-card--header"
 >
  <h4
   className="title"
  >
   Status 
  </h4>
  <i
   className="fa trash"
  />
 </div>
 <div
  className="filter-card--body"
 >
  Category
  <ul
   className="filter-card--body--list"
  >
   <li>
    <input
     checked={false}
     name="cat-cat1"
     type="checkbox"
    />
    <label
     htmlFor="cat-cat1"
    >
     cat1
    </label>
   </li>
   <li>
    <input
     checked={false}
     name="cat-correct"
     type="checkbox"
    />
    <label
     htmlFor="cat-correct"
    >
     correct
    </label>
   </li>
   <li>
    <input
     checked={false}
     name="cat-wrong"
     type="checkbox"
    />
    <label
     htmlFor="cat-wrong"
    >
     wrong
    </label>
   </li>
  </ul>
  Status
  <ul
   className="filter-card--body--list"
  >
   <li>
    <input
     checked={false}
     name="stat-false(reach)"
     type="checkbox"
    />
    <label
     htmlFor="stat-false(reach)"
    >
     false(reach)
    </label>
   </li>
   <li>
    <input
     checked={true}
     name="stat-true"
     type="checkbox"
    />
    <label
     htmlFor="stat-true"
    >
     true
    </label>
   </li>
  </ul>
 </div>
</div>
`;

exports[`FilterCard tests FilterCard should correctly reflect already set text filters 1`] = `
<div
 className="filter-card"
>
 <div
  className="filter-card--header"
 >
  <h4
   className="title"
  >
   host 
  </h4>
  <i
   className="fa trash"
  />
 </div>
 <div
  className="filter-card--body"
 >
  <input
   name="text-undefined"
   placeholder="Search for value"
   type="text"
   value="node-"
  />
 </div>
</div>
`;

exports[`FilterCard tests FilterCard should display checkboxes for status filters 1`] = `
<div
 className="filter-card"
>
 <div
  className="filter-card--header"
 >
  <h4
   className="title"
  >
   Status 
  </h4>
  <i
   className="fa trash"
  />
 </div>
 <div
  className="filter-card--body"
 >
  Category
  <ul
   className="filter-card--body--list"
  >
   <li>
    <input
     checked={false}
     name="cat-cat1"
     type="checkbox"
    />
    <label
     htmlFor="cat-cat1"
    >
     cat1
    </label>
   </li>
   <li>
    <input
     checked={false}
     name="cat-correct"
     type="checkbox"
    />
    <label
     htmlFor="cat-correct"
    >
     correct
    </label>
   </li>
   <li>
    <input
     checked={false}
     name="cat-wrong"
     type="checkbox"
    />
    <label
     htmlFor="cat-wrong"
    >
     wrong
    </label>
   </li>
  </ul>
  Status
  <ul
   className="filter-card--body--list"
  >
   <li>
    <input
     checked={false}
     name="stat-false(reach)"
     type="checkbox"
    />
    <label
     htmlFor="stat-false(reach)"
    >
     false(reach)
    </label>
   </li>
   <li>
    <input
     checked={false}
     name="stat-true"
     type="checkbox"
    />
    <label
     htmlFor="stat-true"
    >
     true
    </label>
   </li>
  </ul>
 </div>
</div>
`;

exports[`FilterCard tests FilterCard should display range slider for number filters 1`] = `
<div
 className="filter-card"
>
 <div
  className="filter-card--header"
 >
  <h4
   className="title"
  >
   cputime 
  </h4>
  <i
   className="fa trash"
  />
 </div>
 <div
  className="filter-card--body"
 >
  <div
   className="filter-card--range-container"
  >
   <b>
    1337
   </b>
   <b>
    9001
   </b>
  </div>
  <div
   className="rc-slider"
  >
   <div
    className="rc-slider-rail"
   />
   <div
    className="rc-slider-track rc-slider-track-1"
    style={
     Object {
      "left": "0%",
      "right": "auto",
      "width": "100%",
     }
    }
   />
   <div
    className="rc-slider-step"
   />
   <div
    aria-disabled={false}
    aria-valuemax={9001}
    aria-valuemin={1337}
    aria-valuenow={1337}
    className="rc-slider-handle rc-slider-handle-1"
    role="slider"
    style={
     Object {
      "left": "0%",
      "right": "auto",
      "transform": "translateX(-50%)",
     }
    }
    tabIndex={0}
   />
   <div
    aria-disabled={false}
    aria-valuemax={9001}
    aria-valuemin={1337}
    aria-valuenow={9001}
    className="rc-slider-handle rc-slider-handle-2"
    role="slider"
    style={
     Object {
      "left": "100%",
      "right": "auto",
      "transform": "translateX(-50%)",
     }
    }
    tabIndex={0}
   />
   <div
    className="rc-slider-mark"
   />
  </div>
  <div
   className="filter-card--range-input-fields"
  >
   <label
    className="range-input-fields--min"
    htmlFor="inp-undefined-min"
   >
    minimum
   </label>
   <label
    className="range-input-fields--max"
    htmlFor="inp-undefined-max"
   >
    maximum
   </label>
   <input
    lang="en-US"
    name="inp-undefined-min"
    step={1}
    type="number"
    value="1337"
   />
   <input
    lang="en-US"
    name="inp-undefined-max"
    step={1}
    type="number"
    value="9001"
   />
  </div>
 </div>
</div>
`;

exports[`FilterCard tests FilterCard should display textbox for text filters 1`] = `
<div
 className="filter-card"
>
 <div
  className="filter-card--header"
 >
  <h4
   className="title"
  >
   host 
  </h4>
  <i
   className="fa trash"
  />
 </div>
 <div
  className="filter-card--body"
 >
  <input
   name="text-undefined"
   placeholder="Search for value"
   type="text"
  />
 </div>
</div>
`;
